assets/css/style.scss
html, body {
	width: 100%;
	height: 100%;
	overflow: hidden;
}
body {
	overflow-x: scroll;
	display: flex;
	flex-flow: row nowrap;
	scroll-snap-type: x mandatory;
	scroll-behavior: smooth;
}
html, body, .page {
	background: white;
}
.icon-btn {
	background: none;
	border: none;
	font-size: calc(1.375rem + 1vw);
	opacity: 0.5;
	transition: opacity 0.2s;
	&:hover, &:focus {
		opacity: 1;
	}

	&.icon-btn-left, &.icon-btn-right {
		min-width: 1em;
		background: url("/SocialMediaDemo/assets/images/icons/larr.svg") no-repeat center center;
		background-size: contain;
		color: transparent;
	}
	&.icon-btn-right {
		transform: rotate(180deg);
	}
}
.page {
	width: 100%;
	height: 100%;
	flex-shrink: 0;
	scroll-snap-align: start;
	scroll-snap-stop: always;
	position: relative;

	display: flex;
	flex-flow: column nowrap;

	&.page-overlay {
		position: absolute;
		top: 0;
		left: 0;
		transform: translateX(100%);
		transition: transform 0.5s;
		&.page-overlay-show {
			transform: translateX(0);
		}
	}

	> .page-header {
		flex: 0;
		padding: 1rem;
		display: flex;
		flex-flow: row nowrap;
		gap: 1rem;

		> * {
			font-size: calc(1.375rem + 1vw);
			margin-bottom: 0;
			line-height: 100%;
		}
	}
	> .portraitArea {
		flex: 1;
	}
}

.portraitArea {
	width: 100%;
	max-width: max(50vh, 700px);
	height: 100%;
	margin: auto;
	overflow-y: auto;
}

.input-group {
	display: flex;
	position: relative;
	padding: 1rem;

	input, textarea {
		flex: 1;
		width: 100%;
		border: none;
		resize: none;
		overflow: hidden;
	}

	&::before {
		content: "";
		position: absolute;
		top: 1rem;
		left: 1rem;
		bottom: 1rem;
		right: 1rem;
		background: rgba(0,0,0,0.1);
		border-radius: 1rem;
		pointer-events: none;

		@media screen and (prefers-color-scheme: dark) {
			background: rgba(255,255,255,0.15);
		}
	}

	> * {
		background: transparent;
		padding: 0.4rem;
		border: none;
	}
	> :nth-child(1) {
		padding-left: 1.5rem;
	}
	> :nth-last-child(1) {
		padding-right: 1.5rem;
	}
}

@import "pageCamera";
@import "pageChat";
@import "pageLogin";
@import "pageMessages";
@import "pageSearch";

@media screen and (prefers-color-scheme: dark) {
	html, body, .page {
		background: black;
		color: white;
	}
	.icon-btn {
		filter: brightness(0) invert(1);
	}
	input {
		color: white;
	}
}

